--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         </p>
     </div>
     <h4>🔥内部获取通道🔥</h4>
-    <p id="p2">视频画面敏感，完全发不了，我上传到<font color="#ff0000">【抖音极速版】APP</font>私密列表里了，【抖音极速版】app审核不严，扫码就可以进入我的私密链接，<font
-            color="purple">无偿分享500＋明星网红🍉</font>
+    <p id="p2">视频画面敏感，完全发不了，我上传到<font color="#ff0000">【抖音极速版/快手极速版】APP</font>私密列表里了，【抖音极速版/快手极速版】app审核不严，扫码就可以进入我的私密链接，
+        <font color="purple">无偿分享500＋明星网红🍉</font>
     </p>
     <font color="purple">
         <p id="p3">
@@ -55,14 +55,14 @@
         </p>
         <p id="p3">
             <font color=" green">
-                <font color=" red">②：扫码或手机商店下载【抖音极速版】APP!
+                <font color=" red">②：扫码或手机商店下载【抖音极速版/快手极速版】APP!
                 </font>
             </font>
         </p>
         <p id="p3">
             <font color=" green">
                 <font color=" red">
-                    <font color="0072d2">③：打开【抖音极速版】APP,扫一扫保存的二维码!
+                    <font color="0072d2">③：打开【抖音极速版/快手极速版】APP,扫一扫保存的二维码!
                     </font>
                 </font>
             </font>
@@ -134,7 +134,7 @@
                             <font color=" red">⭕⭕注意—注意❌❌</font>
                         </h4>
                         <font color=" red">
-                            <p id="p5"><strong style="background:yellow">①：用手机号登入【抖音极速版app】🐧</strong></p>
+                            <p id="p5"><strong style="background:yellow">①：用手机号登入【抖音极速版/快手极速版app】🐧</strong></p>
                             <p id="p5"><strong style="background:Violet">②：扫码后返回首页！！刷几个短视频🍉</strong></p>
                             <p id="p5">
                                 <font color="red">③：🔓一定要看完三分钟后自动解锁</font>
