--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
         <p id="p9"> 永久回家地址-
         </p>
     </div>
-    <h4>🔥内部获取通道🔥</h4>
-    <p id="p2">视频画面敏感，完全发不了，我上传到<font color="#ff0000">【抖音极速版/快手极速版】APP</font>私密列表里了，【抖音极速版/快手极速版】app审核不严，扫码就可以进入我的私密链接，
-        <font color="purple">无偿分享500＋明星网红🍉</font>
+    <h4>🔥【抖音极速版】内部获取通道🔥</h4>
+    <p id="p2">视频画面敏感，完全发不了，我上传到<font color="#ff0000">【抖音极速版】APP</font>私密列表里了，【抖音极速版】app审核不严，扫码就可以进入我的私密链接，<font
+            color="purple">无偿分享500＋明星网红🍉</font>
     </p>
     <font color="purple">
         <p id="p3">
@@ -55,14 +55,14 @@
         </p>
         <p id="p3">
             <font color=" green">
-                <font color=" red">②：扫码或手机商店下载【抖音极速版/快手极速版】APP!
+                <font color=" red">②：扫码或手机商店下载【抖音极速版】APP!
                 </font>
             </font>
         </p>
         <p id="p3">
             <font color=" green">
                 <font color=" red">
-                    <font color="0072d2">③：打开【抖音极速版/快手极速版】APP,扫一扫保存的二维码!
+                    <font color="0072d2">③：打开【抖音极速版】APP,扫一扫保存的二维码!
                     </font>
                 </font>
             </font>
@@ -114,27 +114,109 @@
                                 src="https://archive.biliimg.com/bfs/archive/4a88a1f1af749414b3a7a800492e2fa41282462c.png"
                                 alt="二维码图片">
                         </p>
-
-                        <div class="masked"
-                            style="font-size:30px; text-align:center; margin-bottom:10px; color: #F00; font-weight: bold;">
-                            <font color=" green">
-                                <font color=" red">
-                                    <font color="0072d2">
-                                        <font color="purple">👇 【快手极速版】私密邀请码👇</font>
-                                    </font>
-                                </font>
-                            </font>
-                        </div>
-                        <p id="p7"><img
-                                src="https://archive.biliimg.com/bfs/archive/4a88a1f1af749414b3a7a800492e2fa41282462c.png"
-                                alt="二维码图片">
-                        </p>
-
                         <h4>
                             <font color=" red">⭕⭕注意—注意❌❌</font>
                         </h4>
                         <font color=" red">
-                            <p id="p5"><strong style="background:yellow">①：用手机号登入【抖音极速版/快手极速版app】🐧</strong></p>
+                            <p id="p5"><strong style="background:yellow">①：用手机号登入【抖音极速版app】🐧</strong></p>
+                            <p id="p5"><strong style="background:Violet">②：扫码后返回首页！！刷几个短视频🍉</strong></p>
+                            <p id="p5">
+                                <font color="red">③：🔓一定要看完三分钟后自动解锁</font>
+                            </p>
+                            <p id="p5">
+                                <font color="0072d2">④：如果有没弹出来的，第二天我会补发邀请🍉正常登录即可收到</font>
+                            </p>
+                        </font>
+                        <p id="p5">
+                            <font color=" red">⌛当天未成功的，次日上线刷新几分钟就可以收到解锁🔓！</font>
+                        </p>
+                    </font>
+                    <p id="p5">
+                        <font color="purple">🔐如果第二天还有没弹出的，后面会统一内邀，保持登录即可收到🍉</font>
+                    </p>
+
+                </font>
+            </font>
+        </font>
+    </font>
+
+
+
+    <h4>🔥【快手极速版】内部获取通道🔥</h4>
+    <p id="p2">视频画面敏感，完全发不了，我上传到<font color="#ff0000">【快手极速版】APP</font>私密列表里了，【快手极速版】app审核不严，扫码就可以进入我的私密链接，<font
+            color="purple">无偿分享500＋明星网红🍉</font>
+    </p>
+    <font color="purple">
+        <p id="p3">
+            <font color=" green">①：截图保存下面👇二维码!
+            </font>
+        </p>
+        <p id="p3">
+            <font color=" green">
+                <font color=" red">②：扫码或手机商店下载【快手极速版】APP!
+                </font>
+            </font>
+        </p>
+        <p id="p3">
+            <font color=" green">
+                <font color=" red">
+                    <font color="0072d2">③：打开【快手极速版】APP,扫一扫保存的二维码!
+                    </font>
+                </font>
+            </font>
+        </p>
+        <p id="p3">
+            <font color=" green">
+                <font color=" red">
+                    <font color="0072d2">
+                        <font color="purple">④：即可解锁各大平台网红视频!
+                            <style>
+                                .masked {
+                                    background-image: -webkit-linear-gradient(left, #3498db, #f47920 10%, #d71345 20%, #f7acbc 30%, #ffd400 40%, #3498db 50%, #f47920 60%, #d71345 70%, #f7acbc 80%, #ffd400 90%, #3498db);
+                                    color: transparent;
+                                    -webkit-text-fill-color: transparent;
+                                    -webkit-background-clip: text;
+                                    background-size: 200% 100%;
+                                    animation: masked-animation 2s infinite linear;
+                                }
+
+                                @keyframes masked-animation {
+                                    0% {
+                                        background-position: 0 0;
+                                    }
+
+                                    100% {
+                                        background-position: -100% 0;
+                                    }
+                            </style>
+                        </font>
+                    </font>
+                </font>
+            </font>
+        </p>
+        <div class="masked"
+            style="font-size:30px; text-align:center; margin-bottom:10px; color: #F00; font-weight: bold;">
+            <font color=" green">
+                <font color=" red">
+                    <font color="0072d2">
+                        <font color="purple">👇 【快手极速版】私密邀请码👇</font>
+                    </font>
+                </font>
+            </font>
+        </div>
+        <font color=" green">
+            <font color=" red">
+                <font color="0072d2">
+                    <font color="purple">
+                        <p id="p7"><img
+                                src="https://archive.biliimg.com/bfs/archive/4a88a1f1af749414b3a7a800492e2fa41282462c.png"
+                                alt="二维码图片">
+                        </p>
+                        <h4>
+                            <font color=" red">⭕⭕注意—注意❌❌</font>
+                        </h4>
+                        <font color=" red">
+                            <p id="p5"><strong style="background:yellow">①：用手机号登入【快手极速版app】🐧</strong></p>
                             <p id="p5"><strong style="background:Violet">②：扫码后返回首页！！刷几个短视频🍉</strong></p>
                             <p id="p5">
                                 <font color="red">③：🔓一定要看完三分钟后自动解锁</font>
