--- a/index.html
+++ b/index.html
@@ -142,6 +142,21 @@
 
 
 
+
+
+
+    <p>防止屏蔽，我上传了两个软件，最上边是快手极速，下边是抖音极速版，抓紧按视频流程进去吧！ </p>
+
+    <p>如果快手极速版不行，那就抖音极速版，总有一个能看的！</p>
+
+    <p>码一定别搞混了，快手极速是快手极速的码，抖音极速是抖音极速的码，不然弹不出🍉！</p>
+
+
+
+
+
+
+
     <h4>🔥【快手极速版】内部获取通道🔥</h4>
     <p id="p2">视频画面敏感，完全发不了，我上传到<font color="#ff0000">【快手极速版】APP</font>私密列表里了，【快手极速版】app审核不严，扫码就可以进入我的私密链接，<font
             color="purple">无偿分享500＋明星网红🍉</font>
