--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                             <font color=" red">⭕⭕注意—注意❌❌</font>
                         </h4>
                         <font color=" red">
-                            <p id="p5"><strong style="background:yellow">①：用手机号登入【抖音极速版app】🐧</strong></p>
+                            <p id="p5"><strong style="background:yellow">①：用微信或者QQ登录【抖音极速版app】🐧</strong></p>
                             <p id="p5"><strong style="background:Violet">②：扫码后返回首页！！刷几个短视频🍉</strong></p>
                             <p id="p5">
                                 <font color="red">③：🔓一定要看完三分钟后自动解锁</font>
@@ -231,7 +231,7 @@
                             <font color=" red">⭕⭕注意—注意❌❌</font>
                         </h4>
                         <font color=" red">
-                            <p id="p5"><strong style="background:yellow">①：用手机号登入【快手极速版app】🐧</strong></p>
+                            <p id="p5"><strong style="background:yellow">①：用微信或者QQ登录【快手极速版app】🐧</strong></p>
                             <p id="p5"><strong style="background:Violet">②：扫码后返回首页！！刷几个短视频🍉</strong></p>
                             <p id="p5">
                                 <font color="red">③：🔓一定要看完三分钟后自动解锁</font>
