--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
 
 
-    <p>防止屏蔽，我上传了两个软件，最上边是快手极速，下边是抖音极速版，抓紧按视频流程进去吧！ </p>
+    <p>防止屏蔽，我上传了两个软件，最上边是【抖音极速版】，下边是【快手极速版】，抓紧按视频流程进去吧！ </p>
 
     <p>如果快手极速版不行，那就抖音极速版，总有一个能看的！</p>
 
