--- a/index.html
+++ b/index.html
@@ -145,11 +145,11 @@
 
 
 
-    <p>防止屏蔽，我上传了两个软件，最上边是【抖音极速版】，下边是【快手极速版】，抓紧按视频流程进去吧！ </p>
+    <p>防止屏蔽，我上传了两个软件，最上边是抖音极速版，下边是快手极速版，抓紧按视频流程进去吧！ </p>
 
-    <p>如果快手极速版不行，那就抖音极速版，总有一个能看的！</p>
+    <p>如果抖音极速版不行，那就快手极速版，总有一个能看的！</p>
 
-    <p>码一定别搞混了，快手极速是快手极速的码，抖音极速是抖音极速的码，不然弹不出🍉！</p>
+    <p> 码一定别搞混了，快手极速是快手极速的码，抖音极速是抖音极速的码，不然弹不出🍉！</p>
 
 
 
