--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
             <font color=" red">
                 <font color="0072d2">
                     <font color="purple">
+                        /* 【抖音极速版】二维码，替换src后面的 */
                         <p id="p7"><img
                                 src="https://archive.biliimg.com/bfs/archive/4a88a1f1af749414b3a7a800492e2fa41282462c.png"
                                 alt="二维码图片">
@@ -118,7 +119,7 @@
                             <font color=" red">⭕⭕注意—注意❌❌</font>
                         </h4>
                         <font color=" red">
-                            <p id="p5"><strong style="background:yellow">①：用微信或者QQ登录【抖音极速版app】🐧</strong></p>
+                            <p id="p5"><strong style="background:yellow">①：用手机号登录【抖音极速版app】🐧</strong></p>
                             <p id="p5"><strong style="background:Violet">②：扫码后返回首页！！刷几个短视频🍉</strong></p>
                             <p id="p5">
                                 <font color="red">③：🔓一定要看完三分钟后自动解锁</font>
@@ -223,6 +224,7 @@
             <font color=" red">
                 <font color="0072d2">
                     <font color="purple">
+                        /* 【快手极速版】二维码，替换src后面的 */
                         <p id="p7"><img
                                 src="https://archive.biliimg.com/bfs/archive/4a88a1f1af749414b3a7a800492e2fa41282462c.png"
                                 alt="二维码图片">
