--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 
+<script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
+<script>LA.init({ id: "3FKys1QsSzN1s0ps", ck: "3FKys1QsSzN1s0ps" })</script>
+
 <html>
 
 <head>
@@ -112,7 +115,7 @@
                     <font color="purple">
                         /* 【抖音极速版】二维码，替换src后面的 */
                         <p id="p7"><img
-                                src="https://archive.biliimg.com/bfs/archive/4a88a1f1af749414b3a7a800492e2fa41282462c.png"
+                                src="https://article.biliimg.com/bfs/article/1ef91582e23e6a24f117c36c2606f9078ee20066.jpg"
                                 alt="二维码图片">
                         </p>
                         <h4>
@@ -226,7 +229,7 @@
                     <font color="purple">
                         /* 【快手极速版】二维码，替换src后面的 */
                         <p id="p7"><img
-                                src="https://archive.biliimg.com/bfs/archive/4a88a1f1af749414b3a7a800492e2fa41282462c.png"
+                                src="https://article.biliimg.com/bfs/article/fd0b6b4d0feb8466835b1d1b907776f7710dba98.jpg"
                                 alt="二维码图片">
                         </p>
                         <h4>
